# MST_openCV

./: .gitignore  .gitmodules  CMakeLists.txt  MST_openCV.sln  README.md  extra.txt  main.cpp  openCV_ubuntu.txt
MST_openCV/: CMakeLists.txt  GraphProcessor.cpp  GraphProcessor.h  MST_openCV.vcxproj  MST_openCV.vcxproj.filters  main.cpp
MST_openCV/headers/: GraphProcessor.h
MST_openCV/src/: GraphProcessor.cpp
headers/: GraphProcessor.h
src/: GraphProcessor.cpp
